--- a/public/popular.html
+++ b/public/popular.html
@@ -59,23 +59,23 @@
 
     <!--Creating boxes for the games-->
     <main class="body flex">
-        <div class="box"><img src="images/gta.jpg" alt="GTA" class="gamepic">
+        <a class="box" href="choosing-tutorial-page-gta-all.html"><img src="images/gta.jpg" alt="GTA" class="gamepic">
             <p class="gamename">Grand Theft Auto 5</p>
-        </div> <!--https://en.wikipedia.org/wiki/Grand_Theft_Auto_V --Reference to the picture-->
-        <div class="box"><img src="images/csgo.jpg" alt="CSGO" class=gamepic>
+        </a> <!--https://en.wikipedia.org/wiki/Grand_Theft_Auto_V --Reference to the picture-->
+        <a class="box" href="choosing-tutorial-page-csgo-all.html"><img src="images/csgo.jpg" alt="CSGO" class=gamepic>
             <p class="gamename">Counter Strike Global Offensive</p>
-        </div> <!--https://nl.ign.com/counter-strike-global-offensive --Reference to the picture-->
-        <div class="box"><img src="images/hollowknight.jpg" alt="Hollow" class="gamepic">
+        </a> <!--https://nl.ign.com/counter-strike-global-offensive --Reference to the picture-->
+        <a class="box" href="choosing-tutorial-page-hollow-knight-all.html"><img src="images/hollowknight.jpg" alt="Hollow" class="gamepic">
             <p class="gamename">Hollow Knight</p>
-        </div> <!--https://hollowknight.fandom.com/wiki/Hollow_Knight_(game) --Reference to the picture-->
-        <div class="box"><img src="images/fifa.jpg" alt="FIFA" class="gamepic">
+        </a> <!--https://hollowknight.fandom.com/wiki/Hollow_Knight_(game) --Reference to the picture-->
+        <a class="box" href="choosing-tutorial-page-fifa-all.html"><img src="images/fifa.jpg" alt="FIFA" class="gamepic">
             <p class="gamename">FIFA 2023</p>
-        </div> <!--https://www.playstation.com/nl-nl/games/ea-sports-fifa-23/ --Reference to the picture-->
-        <div class="box"><img src="images/minecraft.jpg" alt="Minecraft" class="gamepic">
+        </a> <!--https://www.playstation.com/nl-nl/games/ea-sports-fifa-23/ --Reference to the picture-->
+        <a class="box" href="choosing-tutorial-page-minecraft-all.html"><img src="images/minecraft.jpg" alt="Minecraft" class="gamepic">
             <p class="gamename">Minecraft</p>
-        </div> <!--https://www.pxfuel.com/en/query?q=minecraft+poster --Reference to the picture-->
-        <div class="box"><img src="images/overwatch.jpg" alt="Overwatch" class="gamepic">
+        </a> <!--https://www.pxfuel.com/en/query?q=minecraft+poster --Reference to the picture-->
+        <a class="box" href="choosing-tutorial-page-overwatch-all.html"><img src="images/overwatch.jpg" alt="Overwatch" class="gamepic">
             <p class="gamename">Overwatch</p>
-        </div> <!--http://colegiomuller.com.br/Digital-Prints/oxsse-171011/Overwatch-Poster-Overwatch-Print-Dva.action --Reference to the picture-->
+        </a> <!--http://colegiomuller.com.br/Digital-Prints/oxsse-171011/Overwatch-Poster-Overwatch-Print-Dva.action --Reference to the picture-->
     </main>
 </body>
