--- a/public/fps.html
+++ b/public/fps.html
@@ -15,6 +15,20 @@
     <div class="bg darken"></div>
 
 
+    <header>
+        <a href="index.html">
+          <img id="headerimage" src="images/header.png">
+        </a>
+        <a href="index.html">
+          <img id="headerlogo" href="index.html" src="images/gta1.png">
+        </a>
+        <!-- <button class="buttonlogo">
+          <img id="headerlogo1" src="images/gta2.png">
+        </button> -->
+      </header>
+
+      
+
     <!--Here I create the sidebar with links to different pages on the website-->
     <aside>
 
@@ -47,11 +61,11 @@
 
     <!--Creating boxes for the games-->
     <main class="body flex">
-        <div class="box"><img src="images/csgo.jpg" alt="CSGO" class=gamepic>
+        <a class="box" href="choosing-tutorial-page-csgo-all.html"><img src="images/csgo.jpg" alt="CSGO" class=gamepic>
             <p class="gamename">Counter Strike Global Offensive</p>
-        </div> <!--https://nl.ign.com/counter-strike-global-offensive --Reference to the picture-->
-        <div class="box"><img src="images/overwatch.jpg" alt="Overwatch" class="gamepic">
+        </a> <!--https://nl.ign.com/counter-strike-global-offensive --Reference to the picture-->
+        <a class="box" href="choosing-tutorial-page-overwatch-all.html"><img src="images/overwatch.jpg" alt="Overwatch" class="gamepic">
             <p class="gamename">Overwatch</p>
-        </div> <!--http://colegiomuller.com.br/Digital-Prints/oxsse-171011/Overwatch-Poster-Overwatch-Print-Dva.action --Reference to the picture-->
+        </a> <!--http://colegiomuller.com.br/Digital-Prints/oxsse-171011/Overwatch-Poster-Overwatch-Print-Dva.action --Reference to the picture-->
     </main>
 </body>
