--- a/public/rpg.html
+++ b/public/rpg.html
@@ -15,6 +15,20 @@
     <div class="bg darken"></div>
 
 
+    <header>
+        <a href="index.html">
+          <img id="headerimage" src="images/header.png">
+        </a>
+        <a href="index.html">
+          <img id="headerlogo" href="index.html" src="images/gta1.png">
+        </a>
+        <!-- <button class="buttonlogo">
+          <img id="headerlogo1" src="images/gta2.png">
+        </button> -->
+      </header>
+
+      
+
     <!--Here I create the sidebar with links to different pages on the website-->
     <aside>
 
@@ -47,8 +61,8 @@
 
     <!--Creating boxes for the games-->
     <main class="body flex">
-        <div class="box"><img src="images/gta.jpg" alt="GTA" class="gamepic">
+        <a class="box" href="choosing-tutorial-page-gta-all.html"><img src="images/gta.jpg" alt="GTA" class="gamepic">
             <p class="gamename">Grand Theft Auto 5</p>
-        </div> <!--https://en.wikipedia.org/wiki/Grand_Theft_Auto_V --Reference to the picture-->
+        </a> <!--https://en.wikipedia.org/wiki/Grand_Theft_Auto_V --Reference to the picture-->
     </main>
 </body>
