--- a/public/strategy.html
+++ b/public/strategy.html
@@ -15,6 +15,20 @@
     <div class="bg darken"></div>
 
 
+    <header>
+        <a href="index.html">
+          <img id="headerimage" src="images/header.png">
+        </a>
+        <a href="index.html">
+          <img id="headerlogo" href="index.html" src="images/gta1.png">
+        </a>
+        <!-- <button class="buttonlogo">
+          <img id="headerlogo1" src="images/gta2.png">
+        </button> -->
+      </header>
+
+      
+
     <!--Here I create the sidebar with links to different pages on the website-->
     <aside>
 
