added background picture for index
- Changing from button to just link
- Adding sitemap elements

--- a/public/index.html
+++ b/public/index.html
@@ -47,53 +47,53 @@
       </article>
 
       <section class="grid">
-        <button id="mostpopulargrid">
+        <a id="mostpopulargrid" href="popular.html">
           <h2 class="textingrid">Most Popular</h2>
-        </button>
+        </a>
 
-        <button id="fpsgrid">
+        <a id="fpsgrid" href="fps.html">
           <h2 class="textingrid">FPS</h2>
-        </button>
+        </a>
 
-        <button id="rpggrid">
+        <a id="rpggrid" href="rpg.html">
           <h2 class="textingrid">RPG</h2>
-        </button>
+        </a>
 
-        <button id="sportgrid">
+        <a id="sportgrid" href="sport.html">
           <h2 class="textingrid">Sport</h2>
-        </button>
+        </a>
 
-        <button id="platformergrid">
+        <a id="platformergrid" href="platformer.html">
           <h2 class="textingrid">Platformer</h2>
-        </button>
+        </a>
 
-        <button id="horrorgrid">
+        <a id="horrorgrid" href="horror.html">
           <h2 class="textingrid">Horror</h2>
-        </button>
+        </a>
 
-        <button id="racinggrid">
+        <a id="racinggrid" href="racing.html">
           <h2 class="textingrid">Racing</h2>
-        </button>
+        </a>
 
-        <button id="adventuregrid">
+        <a id="adventuregrid" href="adventure.html">
           <h2 class="textingrid">Adventure</h2>
-        </button>
+        </a>
 
-        <button id="fightinggrid">
+        <a id="fightinggrid" href="fighting.html">
           <h2 class="textingrid">Fighting</h2>
-        </button>
+        </a>
 
-        <button id="puzzlegrid">
+        <a id="puzzlegrid" href="puzzle.html">
           <h2 class="textingrid">Puzzle</h2>
-        </button>
+        </a>
 
-        <button id="strategygrid">
+        <a id="strategygrid" href="strategy.html">
           <h2 class="textingrid">Strategy</h2>
-        </button>
+        </a>
 
-        <button id="actiongrid">
+        <a id="actiongrid" href="action.html">
           <h2 class="textingrid">Action</h2>
-        </button>
+        </a>
       </section>
 
       <footer class="flex">
