added header to about us

--- a/public/about.html
+++ b/public/about.html
@@ -8,9 +8,15 @@
         <section class="background">
             <header>
                 <a href="index.html">
-                    <img id="headerimage" src="images/header.png">
+                  <img id="headerimage" src="images/header.png">
                 </a>
-            </header>
+                <a href="index.html">
+                  <img id="headerlogo" href="index.html" src="images/gta1.png">
+                </a>
+                <!-- <button class="buttonlogo">
+                  <img id="headerlogo1" src="images/gta2.png">
+                </button> -->
+              </header>
             <main>
                 <section class="image-container">
                     <article class="image-item">
@@ -22,12 +28,12 @@
                         </article>
                     </article>                
                     <article class="image-item">
-                        <img src="images/praise.jpg" alt="praise">
-                        <p>My name is Praise and im a member of the group</p>
-                        <article class="social-links">
-                            <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
-                            <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
-                        </article>
+                            <img src="images/praise.jpg" alt="praise">
+                            <p>My name is Praise and im a member of the group</p>
+                            <article class="social-links">
+                                <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
+                                <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+                            </article>
                     </article>
                     <article class="image-item">
                         <img src="images/danya.jpg" alt="danya">
