Deleting unrequred files
- Changing the crop version of the image
- Added all picture to the background for the categories in the index page
-renaming the pic name in the css code

--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
       </section>
 
       <footer class="flex">
-        <a href="aboutus.html">
+        <a href="about.html">
           <img src="images/aboutus.png">
         </a>
         <a href="sitemap.html">
