--- a/public/about.html
+++ b/public/about.html
@@ -5,19 +5,21 @@
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
-        <section class="background">
-            <header>
-                <a href="index.html">
-                  <img id="headerimage" src="images/header.png">
-                </a>
-                <a href="index.html">
-                  <img id="headerlogo" href="index.html" src="images/gta1.png">
-                </a>
-                <!-- <button class="buttonlogo">
-                  <img id="headerlogo1" src="images/gta2.png">
-                </button> -->
-              </header>
-            <main>
+
+        <!-- Background with a darkener -->
+        <!-- change the class to match your game!! -->
+        <div class="bg bg-index"></div>
+        <div class="bg darken"></div>
+        <header>
+            <a href="index.html">
+                <img id="headerimage" src="images/header.png">
+            </a>
+            <a href="index.html">
+                <img id="headerlogo" href="index.html" src="images/gta1.png">
+            </a>
+        </header>
+
+            <main class="body-about-us">
                 <section class="image-container">
                     <article class="image-item">
                         <img src="images/thomas.jpg" alt="thomas">
@@ -53,7 +55,6 @@
                     </article>
                 </section>
             </main>
-        </section>
     </body>
 </html>
 <!--These are the links for the twitter and instagram icons :
