--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,9 @@
       <a href="index.html">
         <img id="headerlogo" href="index.html" type="button" src="images/gta1.png">
       </a>
-      <!-- <button class="buttonlogo">
-        <img id="headerlogo1" src="images/gta2.png">
-      </button> -->
     </header>
 
-    <main>
+    <main class="body-about-us">
       <!-- search bar 
       and a welcome box -->
       <div class="searchwrap">
