--- a/public/choosing-tutorial-page-fifa-all.html
+++ b/public/choosing-tutorial-page-fifa-all.html
@@ -13,7 +13,7 @@
   <body class="">
     <!-- Background with a darkener -->
     <!-- change the class to match your game!! -->
-    <div class="bg bg-GAME"></div>
+    <div class="bg bg-fifa"></div>
     <div class="bg darken"></div>
 
     <!-- Put header here -->
@@ -56,9 +56,9 @@
     <!-- Main Body -->
     <main class="body">
       <!-- Change your hero image here!! -->
-      <img class="hero" src="images/hero-GAME.jpg" alt="">
+      <img class="hero" src="images/hero-fifa.jpg" alt="" ><!--gotten from https://wallpapercave.com/w/wp11326329-->
       <nav>
-        <ul class="flex">
+        <ul class="flex">  
           <!-- Change the sections for your tutorial here!! -->
           <li class="selected"><a href="choosing-tutorial-page-gta-all.html">ALL</a></li>
           <li><a href="choosing-tutorial-page-gta-section1.html">section1</a></li>
