changes to the sections
here i made some changes to the section names on my fifa page and i also started adding some tutorials

--- a/public/choosing-tutorial-page-fifa-all.html
+++ b/public/choosing-tutorial-page-fifa-all.html
@@ -61,27 +61,27 @@
         <ul class="flex">  
           <!-- Change the sections for your tutorial here!! -->
           <li class="selected"><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
-          <li><a href="choosing-tutorial-page-fifa-section1.html">section1</a></li>
-          <li><a href="choosing-tutorial-page-fifa-section2.html">section2</a></li>
+          <li><a href="choosing-tutorial-page-fifa-section1.html">Fifa 23 Guides</a></li>
+          <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay Screenshots</a></li>
           <li><a href="choosing-tutorial-page-fifa-section3.html">section3</a></li>
         </ul>
       </nav>
 
       <!-- Each article is one tutorial -->
       <!-- put the link to the tutorialpage here!! -->
-      <a href="Tutorial-gta-1.html">
+      <a href="Tutorial-fifa-1.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
           <img src="images/tutorial-GAME-1.png" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
-            <h2 class="margin-0">Name of tutorial</h2>
+            <h2 class="margin-0">How to Perform skill moves </h2>
             <hr>
             <!-- Change you name here!! -->
-            <h6 class="margin-0">By Thomas Zegers</h6>
+            <h6 class="margin-0">By Ibhaze Praise</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
-              Introduction to tutorial
+              In this tutorial, you'll find out how to execute fancy skills in FIFA 23
             </p>
           </div>
         </article>
@@ -96,7 +96,7 @@
             <h2 class="margin-0">Name of tutorial</h2>
             <hr>
             <!-- Change you name here!! -->
-            <h6 class="margin-0">By Thomas Zegers</h6>
+            <h6 class="margin-0">By Ibhaze Praise</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
               Introduction to tutorial
