--- a/public/Guide-fifa-1.html
+++ b/public/Guide-fifa-1.html
@@ -57,10 +57,10 @@
     <!-- Main Body -->
     <main class="body">
         <section class="flex tutorial">
-            <a class="dark-box" href="choosing-tutorial-page-fifa-all.html">
+            <a class="dark-box" href="choosing-tutorial-page-fifa-section1.html">
                 Back
             </a>
-            <a class="orange-box" href="choosing-tutorial-page-fifa-all.html">
+            <a class="orange-box" href="choosing-tutorial-page-fifa-section1.html">
                 <!-- Change the name to your game here!! -->
                 FIFA
             </a>
@@ -73,18 +73,14 @@
                 </div>
                 <h2>
                     <!-- Name of tutorial here!! -->
-                    How to Perform skill moves 
+                    Top 10 players on Fifa 23
                 </h2>
             </div>
             <!-- put the tutorial in this div -->
             <div class="flex">
                 <p>
-                    In this tutorial, you'll find out not only how to perform any skill moves but also how to execute fancy skills in FIFA 23.
-                    In this FIFA 23 tutorial I will show you the top five most fancy skill moves and I will teach you how to use them effectively in game on both consoles, Xbox and playstation. This tutorial includes controller animations and simple instructions make it easier to visually see how to perform the skill moves better. 
-                    with this incredible new fancy skill moves you will be able to step up your fancy gameplay against your friends or in fut champs with som fancy skill moves to score some unbelievable goals they have never seen before. 
-                    This FIFA 23 tutorial includes only four and five star skill moves including the drag back fake ,the sombrero flick ,the rainbow flick , the Heel fake and the Bolasie flick 
+                    v
                 </p>
-                <iframe src="https://www.youtube.com/embed/BV84eU33h0o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
             </div>
             <!-- navigation under the tutorial -->
             <nav class="flex">
