--- a/public/choosing-tutorial-page-fifa-all.html
+++ b/public/choosing-tutorial-page-fifa-all.html
@@ -61,8 +61,8 @@
         <ul class="flex">  
           <!-- Change the sections for your tutorial here!! -->
           <li class="selected"><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
-          <li><a href="choosing-tutorial-page-fifa-section1.html">Fifa 23 Guides</a></li>
-          <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay Screenshots</a></li>
+          <li><a href="choosing-tutorial-page-fifa-section1.html">Guides</a></li>
+          <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay </a></li>
           <li><a href="choosing-tutorial-page-fifa-section3.html">section3</a></li>
         </ul>
       </nav>
