--- a/public/choosing-tutorial-page-fifa-section1.html
+++ b/public/choosing-tutorial-page-fifa-section1.html
@@ -61,14 +61,30 @@
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
           <li><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
-          <li class="selected"><a href="choosing-tutorial-page-fifa-section1.html">Fifa 23 Guides</a></li>
-          <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay Screenshots</a></li>
+          <li class="selected"><a href="choosing-tutorial-page-fifa-section1.html">Guides</a></li>
+          <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay </a></li>
           <li><a href="choosing-tutorial-page-fifa-section3.html">section3</a></li>
         </ul>
       </nav>
 
       <!-- Put your tutorials here -->
-
+      <a href="Guide-fifa-1.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-GAME-1.png" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Fifa 23 Best Players   </h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ibhaze Praise</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Here are the top 10 players taking the digital pitch in this year's game.
+            </p>
+          </div>
+        </article>
+      </a>
     </main>
   </body>
 </html>
