--- a/public/choosing-tutorial-page-fifa-section2.html
+++ b/public/choosing-tutorial-page-fifa-section2.html
@@ -61,14 +61,23 @@
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
           <li><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
-          <li><a href="choosing-tutorial-page-fifa-section1.html">Fifa 23 Guides</a></li>
-          <li class="selected"><a href="choosing-tutorial-page-fifa-section2.html">Gameplay Screenshots</a></li>
+          <li><a href="choosing-tutorial-page-fifa-section1.html"> Guides</a></li>
+          <li class="selected"><a href="choosing-tutorial-page-fifa-section2.html">Gameplay</a></li>
           <li><a href="choosing-tutorial-page-fifa-section3.html">section3</a></li>
         </ul>
       </nav>
-
+      <section class="tutorial dark-box">
+        <img src="images/game-screenshots-fifa-1.webp">
+        <img src="images/game-screenshots-fifa-2.webp">
+        <img src="images/game-screenshots-fifa-3.webp">
+        <img src="images/game-screenshots-fifa-4.webp">
+        <img src="images/game-screenshots-fifa-5.webp">
+        <img src="images/game-screenshots-fifa-6.webp">
+        <img src="images/game-screenshots-fifa-7.webp">
+      </section>
       <!-- Put your tutorials here -->
-
+      <!--This is the link to the page where i got all the pictures for this page -->
+      <!--https://nl.ign.com/fifa-23/139645/gallery/fifa-23-screens-->
     </main>
   </body>
 </html>
