--- a/public/Guide-fifa-1.html
+++ b/public/Guide-fifa-1.html
@@ -78,9 +78,11 @@
             </div>
             <!-- put the tutorial in this div -->
             <div class="flex">
-                <p>
-                    v
-                </p>
+                <p >
+                    Welcome to our guide featuring the top 10 players in FIFA 23! FIFA is an exciting football video game that showcases the skills of the world's best players. In this guide, we have picked out the standout athletes who will dominate the virtual field in FIFA 23. These players have incredible abilities and speed that make them a force to be reckoned with. Whether you're a passionate gamer or a football fan looking to learn more, join us as we explore the highest-rated players in FIFA 23 and discover the superstars who will shape your virtual football experience.
+                    <strong>1. Karim Benzema (Real Madrid/France, 91 OVR)</strong>
+                    The French striker gained two rating points from last year's game, which helps him ascend to being the best player in FIFA 23--marking the first time in over a decade that the top overall ranking wasn't occupied by Messi or Ronaldo. Benzema breaks the six-way tie at 91 overall with higher ratings in passing, dribbling, and speed over the second-ranked Lewandowski, earning him the top spot.
+                </p> 
             </div>
             <!-- navigation under the tutorial -->
             <nav class="flex">
