Changed the pictures inside of CSGO page, added text about me

--- a/public/about.html
+++ b/public/about.html
@@ -39,7 +39,12 @@
                     </article>
                     <article class="image-item">
                         <img src="images/danya.jpg" alt="danya">
-                        <p>My name is Danya and im a member of the group</p>
+                        <p>My name is Danya and I am a member of the group  of Game Tutorial Alliance. I have some experience in Html and CSS through my studies in Fontys
+                            University of Applied Scince where I have been working on the websites for Pizzeria's. My responsibility inside of the group is to, as everyone,
+                            work together on the tasks where we need everyone to participate, I am also responsible for keeping track of things we are doing and need to do.
+                            I also take responsibilty to organise the group when leader is not present. Inside of the website itself my contribution was to create the sidebar 
+                            navigation and to create the genre pages. And, of course, I am responsible to make a tutorial for the game I choose, which is CSGO.
+                        </p>
                         <article class="social-links">
                             <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
                             <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
