--- a/public/choosing-tutorial-page-csgo-all.html
+++ b/public/choosing-tutorial-page-csgo-all.html
@@ -13,7 +13,7 @@
   <body class="">
     <!-- Background with a darkener -->
     <!-- change the class to match your game!! -->
-    <div class="bg bg-GAME"></div>
+    <div class="bg bg-csgo"></div>
     <div class="bg darken"></div>
 
     <!-- Put header here -->
@@ -56,14 +56,15 @@
     <!-- Main Body -->
     <main class="body">
       <!-- Change your hero image here!! -->
-      <img class="hero" src="images/hero-GAME.jpg" alt="">
+      <img class="hero" src="images/hero-csgo.jpg" alt="">
       <nav>
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
           <li class="selected"><a href="choosing-tutorial-page-gta-all.html">ALL</a></li>
-          <li><a href="choosing-tutorial-page-gta-section1.html">section1</a></li>
-          <li><a href="choosing-tutorial-page-gta-section2.html">section2</a></li>
-          <li><a href="choosing-tutorial-page-gta-section3.html">section3</a></li>
+          <li><a href="choosing-tutorial-page-gta-section1.html">Grenades</a></li>
+          <li><a href="choosing-tutorial-page-gta-section2.html">Positions</a></li>
+          <li><a href="choosing-tutorial-page-gta-section3.html">Recoil</a></li>
+          <li><a href="choosing-tutorial-page-gta-section3.html">Console</a></li>
         </ul>
       </nav>
 
@@ -72,13 +73,13 @@
       <a href="Tutorial-gta-1.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-GAME-1.png" alt="">
+          <img src="images/tutorial-csgo-1.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">Name of tutorial</h2>
             <hr>
             <!-- Change you name here!! -->
-            <h6 class="margin-0">By Thomas Zegers</h6>
+            <h6 class="margin-0">By Danya Korovianskyi</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
               Introduction to tutorial
@@ -90,13 +91,13 @@
       <a href="#2">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-GAME-1.png" alt="">
+          <img src="images/tutorial-csgo-1.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">Name of tutorial</h2>
             <hr>
             <!-- Change you name here!! -->
-            <h6 class="margin-0">By Thomas Zegers</h6>
+            <h6 class="margin-0">By Danya Korovianskyi</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
               Introduction to tutorial
@@ -108,13 +109,13 @@
       <a href="#3">
         <article class="flex tutorial ">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-GAME-1.png" alt="">
+          <img src="images/tutorial-csgo-1.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">Name of tutorial</h2>
             <hr>
             <!-- Change you name here!! -->
-            <h6 class="margin-0">By Thomas Zegers</h6>
+            <h6 class="margin-0">By Danya Korovianskyi</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
               Introduction to tutorial
@@ -128,4 +129,8 @@
 </html>
 
 
-https://stryda.gg/news/category/cs-go
+<!-- References to the pictures
+https://hotcore.info/babki/photoshop-counter-strike-banner-channel.htm
+https://wallpapers.com/4k-cs-go
+https://www.dictionary.com/e/pop-culture/csgo/
+-->
