--- a/public/choosing-tutorial-page-fifa-all.html
+++ b/public/choosing-tutorial-page-fifa-all.html
@@ -56,7 +56,7 @@
     <!-- Main Body -->
     <main class="body">
       <!-- Change your hero image here!! -->
-      <img class="hero" src="images/hero-fifa.jpg" alt="" height="450px" ><!--gotten from https://wallpapercave.com/w/wp11326329-->
+      <img class="hero" src="images/hero-fifa.jpg" alt="" ><!--gotten from https://wallpapercave.com/w/wp11326329-->
       <nav>
         <ul class="flex">  
           <!-- Change the sections for your tutorial here!! -->
@@ -114,7 +114,7 @@
             <h2 class="margin-0">Name of tutorial</h2>
             <hr>
             <!-- Change you name here!! -->
-            <h6 class="margin-0">By Thomas Zegers</h6>
+            <h6 class="margin-0">By Ibhaze Praise</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
               Introduction to tutorial
