--- a/public/choosing-tutorial-page-fifa-all.html
+++ b/public/choosing-tutorial-page-fifa-all.html
@@ -72,7 +72,7 @@
       <a href="Tutorial-fifa-1.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-GAME-1.png" alt="">
+          <img src="images/tutorial-fifa-1.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">How to Perform skill moves </h2>
@@ -90,7 +90,7 @@
       <a href="#2">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-GAME-1.png" alt="">
+          <img src="images/tutorial-fifa-1.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">Name of tutorial</h2>
@@ -108,7 +108,7 @@
       <a href="#3">
         <article class="flex tutorial ">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-GAME-1.png" alt="">
+          <img src="images/tutorial-fifa-1.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">Name of tutorial</h2>
