--- a/public/choosing-tutorial-page-fifa-all.html
+++ b/public/choosing-tutorial-page-fifa-all.html
@@ -75,31 +75,31 @@
           <img src="images/tutorial-fifa-1.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
-            <h2 class="margin-0">How to Perform skill moves </h2>
+            <h2 class="margin-0">Fifa 23 Basics</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ibhaze Praise</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Here you'll find out how to execute basic moves in fifa 23
+            </p>
+          </div>
+        </article>
+      </a>
+
+      <a href="Tutorial-fifa-2.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">How to Perform Skill Moves</h2>
             <hr>
             <!-- Change you name here!! -->
             <h6 class="margin-0">By Ibhaze Praise</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
               In this tutorial, you'll find out how to execute fancy skills in FIFA 23
-            </p>
-          </div>
-        </article>
-      </a>
-
-      <a href="#2">
-        <article class="flex tutorial">
-          <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-fifa-1.jpg" alt="">
-          <div>
-            <!-- Change the name of tutorial here!! -->
-            <h2 class="margin-0">Name of tutorial</h2>
-            <hr>
-            <!-- Change you name here!! -->
-            <h6 class="margin-0">By Ibhaze Praise</h6>
-            <!-- Write a summary of the tutorial here!! -->
-            <p>
-              Introduction to tutorial
             </p>
           </div>
         </article>
