--- a/public/choosing-tutorial-page-fifa-section1.html
+++ b/public/choosing-tutorial-page-fifa-section1.html
@@ -71,7 +71,7 @@
       <a href="Guide-fifa-1.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-GAME-1.png" alt="">
+          <img src="images/tutorial-fifa-1.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">Fifa 23 Best Players   </h2>
