--- a/public/Tutorial-fifa-1.html
+++ b/public/Tutorial-fifa-1.html
@@ -62,7 +62,7 @@
             </a>
             <a class="orange-box" href="choosing-tutorial-page-fifa-all.html">
                 <!-- Change the name to your game here!! -->
-                FIFA 23
+                FIFA
             </a>
         </section>
         <section class="tutorial dark-box">
@@ -73,26 +73,50 @@
                 </div>
                 <h2>
                     <!-- Name of tutorial here!! -->
-                    BASICS
+                    How to Perform skill moves 
                 </h2>
             </div>
             <!-- put the tutorial in this div -->
-            <div class="flex">
+            <div class="subsection">
+              <div class="intro-text">
                 <p>
-                  Welcome to the world of FIFA 23! Whether you're a seasoned gamer or just starting out, this tutorial will guide you through the basics of this popular football video game. FIFA 23 offers an exciting experience where you can take control of your favorite teams and players, compete in thrilling matches, and even lead your club to glory. In this tutorial, we'll cover the fundamental aspects of FIFA 23 gameplay, from basic controls to essential strategies. By the end, you'll have a solid foundation to kick-start your FIFA 23 journey and start scoring those unforgettable goals. So, let's get started and discover the thrilling world of FIFA 23 together!
+                  In this tutorial, you'll find out not only how to perform any skill moves but also how to execute fancy skills in FIFA 23.
+                  This tutorial includes controller animations and simple instructions make it easier to visually see how to perform the skill moves better. 
+                  with this incredible new fancy skill moves you will be able to step up your gameplay against your friends and use these skill moves to score some unbelievable goals . 
+                  
                 </p>
-                <iframe src="https://www.youtube.com/embed/clrBaUASPj8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
+              </div>
+              <iframe src="https://www.youtube.com/embed/clrBaUASPj8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
+              <div class="content">
+                <strong>1. Roulette</strong>
+                <p>
+                  To perform the roulette skill in the upward direction, simultaneously tap the A, W, and D keys
+                  ,  and if you want to perform this skill in the downward direction , simultaneously tap the A, S,and D keys
+                </p> 
+                <strong>2. Ball roll</strong> 
+                <p> 
+                  To perform the ball roll skill hold the w or s button while moving with the arrow button 
+                </p>
+                <strong>3.McGeady/Berba Spin</strong>
+                <p>
+                  To perform the Berba spin in the upward direction while moving in a straight line , simultaneously tap the D and W, keys
+                  ,  and if you want to perform this skill in the downward direction , simultaneously tap the D and S keys
+                </p>
+                <strong>4.Elastico</strong>
+                <p>to perform the elastico skill while moving , simultaneously tap the S,A and W keys </p>
+              </div>
+              
             </div>
             <!-- navigation under the tutorial -->
             <nav class="flex">
                 <ul class="flex">
                   <!-- Change the sections for your tutorial here!! -->
                   <li><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
-                  <li><a href="choosing-tutorial-page-fifa-section1.html">section1</a></li>
-                  <li><a href="choosing-tutorial-page-fifa-section2.html">section2</a></li>
+                  <li><a href="choosing-tutorial-page-fifa-section1.html"> Guides</a></li>
+                  <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay </a></li>
                   <li><a href="choosing-tutorial-page-fifa-section3.html">section3</a></li>
                 </ul>
-                <a href="choosing-tutorial-page-fifa-section3.html">Next</a>
+                <a href="Tutorial-fifa-2.html">Next</a>
               </nav>
 
         </section>
