--- a/public/choosing-tutorial-page-fifa-section1.html
+++ b/public/choosing-tutorial-page-fifa-section1.html
@@ -85,6 +85,23 @@
           </div>
         </article>
       </a>
+      <a href="Guide-fifa-2.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">FIFA 23 career mode guide: Lead your team to glory  </h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ibhaze Praise</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Learn how to build the best team in career mode
+            </p>
+          </div>
+        </article>
+      </a>
     </main>
   </body>
 </html>
