changed gta site

--- a/public/choosing-tutorial-page-gta-all.html
+++ b/public/choosing-tutorial-page-gta-all.html
@@ -13,7 +13,7 @@
   <body class="">
     <!-- Background with a darkener -->
     <!-- change the class to match your game!! -->
-    <div class="bg bg-GAME"></div>
+    <div class="bg bg-gta"></div>
     <div class="bg darken"></div>
 
     <!-- Put header here -->
@@ -56,7 +56,7 @@
     <!-- Main Body -->
     <main class="body">
       <!-- Change your hero image here!! -->
-      <img class="hero" src="images/hero-GAME.jpg" alt="">
+      <img class="hero" src="images/hero-gta.jpg" alt="">
       <nav>
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
@@ -72,7 +72,7 @@
       <a href="Tutorial-gta-1.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-GAME-1.png" alt="">
+          <img src="images/tutorial-gta-1.png" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">Name of tutorial</h2>
