--- a/public/Guide-fifa-2.html
+++ b/public/Guide-fifa-2.html
@@ -160,7 +160,7 @@
                   <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay </a></li>
                   <li><a href="choosing-tutorial-page-fifa-section3.html">section3</a></li>
                 </ul>
-                <a href="choosing-tutorial-page-fifa-section3.html">Next</a>
+                <a href="Guide-fifa-3.html">Next</a>
               </nav>
 
         </section>
