--- a/public/choosing-tutorial-page-fifa-all.html
+++ b/public/choosing-tutorial-page-fifa-all.html
@@ -61,9 +61,9 @@
         <ul class="flex">  
           <!-- Change the sections for your tutorial here!! -->
           <li class="selected"><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
+          <li><a href="choosing-tutorial-page-fifa-section3.html">Tactics And Strategies</a></li>
           <li><a href="choosing-tutorial-page-fifa-section1.html">Guides</a></li>
           <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay </a></li>
-          <li><a href="choosing-tutorial-page-fifa-section3.html">section3</a></li>
         </ul>
       </nav>
 
@@ -86,7 +86,75 @@
           </div>
         </article>
       </a>
-
+      <a href="Tutorial-fifa-2.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">FIFA 23 tactics: Attacking settings </h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ibhaze Praise</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Learn how to build the best attacking formation
+            </p>
+          </div>
+        </article>
+      </a>
+      <a href="Tutorial-fifa-3.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">FIFA 23 tactics: Defending settings </h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ibhaze Praise</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Learn how to build the best Defensive formation
+            </p>
+          </div>
+        </article>
+      </a>
+      <a href="Guide-fifa-1.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Fifa 23 Best Players   </h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ibhaze Praise</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Here are the top 10 players taking the digital pitch in this year's game.
+            </p>
+          </div>
+        </article>
+      </a>
+      <a href="Guide-fifa-2.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">FIFA 23 career mode guide: Lead your team to glory  </h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ibhaze Praise</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Learn how to build the best team in career mode
+            </p>
+          </div>
+        </article>
+      </a>
+      
       <a href="#2">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
