--- a/public/choosing-tutorial-page-fifa-section2.html
+++ b/public/choosing-tutorial-page-fifa-section2.html
@@ -61,9 +61,10 @@
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
           <li><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
-          <li><a href="choosing-tutorial-page-fifa-section1.html"> Guides</a></li>
+          <li><a href="choosing-tutorial-page-fifa-section3.html">Tactics And Strategies</a></li> 
+          <li><a href="choosing-tutorial-page-fifa-section1.html"> Guides</a></li> 
           <li class="selected"><a href="choosing-tutorial-page-fifa-section2.html">Gameplay</a></li>
-          <li><a href="choosing-tutorial-page-fifa-section3.html">section3</a></li>
+          
         </ul>
       </nav>
       <section class="tutorial dark-box">
