--- a/public/choosing-tutorial-page-fifa-section3.html
+++ b/public/choosing-tutorial-page-fifa-section3.html
@@ -61,15 +61,65 @@
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
           <li><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
+          <li class="selected"><a href="choosing-tutorial-page-fifa-section3.html">Tactics And Strategies</a></li>
           <li><a href="choosing-tutorial-page-fifa-section1.html">Guides</a></li>
-          <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay </a></li>
-          <li class="selected"><a href="choosing-tutorial-page-fifa-section3.html">section3</a></li>
+          <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay </a></li>    
         </ul>
       </nav>
 
-            <!-- Put your tutorials here -->
-
-
+      <!-- Put your tutorials here -->
+      <a href="Tutorial-fifa-1.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">How to Perform skill moves </h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ibhaze Praise</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              In this tutorial, you'll find out how to execute fancy skills in FIFA 23
+            </p>
+          </div>
+        </article>
+      </a>
+      <a href="Tutorial-fifa-2.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">FIFA 23 tactics: Attacking settings </h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ibhaze Praise</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Learn how to build the best attacking formation
+            </p>
+          </div>
+        </article>
+      </a>
+      <a href="Tutorial-fifa-3.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">FIFA 23 tactics: Defending settings </h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ibhaze Praise</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Learn how to build the best Defensive formation
+            </p>
+          </div>
+        </article>
+      </a>
+      
     </main>
   </body>
 </html>
