creating first tutorial
adding the first tutorial. also making the sections and pve html.

--- a/public/choosing-tutorial-page-overwatch-pve.html
+++ b/public/choosing-tutorial-page-overwatch-pve.html
@@ -60,10 +60,10 @@
       <nav>
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
-          <li class="selected"><a href="choosing-tutorial-page-overwatch-all.html">ALL</a></li>
+          <li><a href="choosing-tutorial-page-overwatch-all.html">ALL</a></li>
           <li><a href="choosing-tutorial-page-overwatch-characters.html">Characters</a></li>
           <li><a href="choosing-tutorial-page-overwatch-events.html">Events</a></li>
-          <li><a href="choosing-tutorial-page-overwatch-pve.html">Pve</a></li>
+          <li class="selected"><a href="choosing-tutorial-page-overwatch-pve.html">Pve</a></li>
         </ul>
       </nav>
 
