--- a/public/Guide-fifa-1.html
+++ b/public/Guide-fifa-1.html
@@ -143,7 +143,7 @@
                 </ul>
                 <a href="Guide-fifa-2.html">Next</a>
               </nav>
-
+              <!--got the tutorial from this page-: https://www.gamespot.com/articles/fifa-23-player-ratings/1100-6507396/-->
         </section>
         
 
