--- a/public/choosing-tutorial-page-fifa-all.html
+++ b/public/choosing-tutorial-page-fifa-all.html
@@ -154,38 +154,37 @@
           </div>
         </article>
       </a>
-      
-      <a href="#2">
+      <a href="Guide-fifa-3.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
           <img src="images/tutorial-fifa-1.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
-            <h2 class="margin-0">Name of tutorial</h2>
+            <h2 class="margin-0">FIFA 23 Ultimate Team Starting Guide </h2>
             <hr>
             <!-- Change you name here!! -->
             <h6 class="margin-0">By Ibhaze Praise</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
-              Introduction to tutorial
+              Here is a beginner's guide to FIFA 23 Ultimate Team
             </p>
           </div>
         </article>
       </a>
-
-      <a href="#3">
-        <article class="flex tutorial ">
+      
+      <a href="choosing-tutorial-page-fifa-section2.html">
+        <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
           <img src="images/tutorial-fifa-1.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
-            <h2 class="margin-0">Name of tutorial</h2>
+            <h2 class="margin-0">Gameplay</h2>
             <hr>
             <!-- Change you name here!! -->
             <h6 class="margin-0">By Ibhaze Praise</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
-              Introduction to tutorial
+              On this page you will get to see some gameplay scrrenshots from FIFA 23
             </p>
           </div>
         </article>
