--- a/public/choosing-tutorial-page-fifa-section1.html
+++ b/public/choosing-tutorial-page-fifa-section1.html
@@ -103,6 +103,23 @@
           </div>
         </article>
       </a>
+      <a href="Guide-fifa-3.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">FIFA 23 Ultimate Team Starting Guide </h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ibhaze Praise</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Here is a beginner's guide to FIFA 23 Ultimate Team
+            </p>
+          </div>
+        </article>
+      </a>
     </main>
   </body>
 </html>
