--- a/public/choosing-tutorial-page-overwatch-events.html
+++ b/public/choosing-tutorial-page-overwatch-events.html
@@ -62,26 +62,44 @@
           <!-- Change the sections for your tutorial here!! -->
           <li><a href="choosing-tutorial-page-overwatch-all.html">ALL</a></li>
           <li><a href="choosing-tutorial-page-overwatch-characters.html">Characters</a></li>
-          <li><a href="choosing-tutorial-page-overwatch-events.html">Events</a></li>
-          <li class="selected"><a href="choosing-tutorial-page-overwatch-pve.html">Pve</a></li>
+          <li class="selected"><a href="choosing-tutorial-page-overwatch-events.html">Events</a></li>
+          <li><a href="choosing-tutorial-page-overwatch-pve.html">Pve</a></li>
         </ul>
       </nav>
 
       <!-- Each article is one tutorial -->
       <!-- put the link to the tutorialpage here!! -->
-      <a href="Tutorial-overwatch2-pve.html">
+      <a href="Tutorial-overwatch2-Halloween-Terror-2022.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-overwatch2-pve.jpg" alt="">
+          <img src="images/tutorial-overwatch2-Halloween-Terror-2022.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
-            <h2 class="margin-0">PvE</h2>
+            <h2 class="margin-0">Halloween Terror 2022 event</h2>
             <hr>
             <!-- Change you name here!! -->
             <h6 class="margin-0">By Thomas Zegers</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
-              Complete guide to all PvE missions
+              Complete guide for the Halloween Terror 2022 event
+            </p>
+          </div>
+        </article>
+      </a>
+
+      <a href="Tutorial-overwatch2-ultimate-valentine.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-overwatch2-ultimate-valentine.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">ULTIMATE VALENTINE Event</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Thomas Zegers</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              Complete guide for the ultimate valentine event
             </p>
           </div>
         </article>
