--- a/public/choosing-tutorial-page-overwatch-characters.html
+++ b/public/choosing-tutorial-page-overwatch-characters.html
@@ -60,8 +60,8 @@
       <nav>
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
-          <li class="selected"><a href="choosing-tutorial-page-overwatch-all.html">ALL</a></li>
-          <li><a href="choosing-tutorial-page-overwatch-characters.html">Characters</a></li>
+          <li><a href="choosing-tutorial-page-overwatch-all.html">ALL</a></li>
+          <li class="selected"><a href="choosing-tutorial-page-overwatch-characters.html">Characters</a></li>
           <li><a href="choosing-tutorial-page-overwatch-events.html">Events</a></li>
           <li><a href="choosing-tutorial-page-overwatch-pve.html">Pve</a></li>
         </ul>
@@ -194,7 +194,7 @@
           </div>
         </article>
       </a>
-      
+
     </main>
   </body>
 </html>
