--- a/public/Guide-fifa-1.html
+++ b/public/Guide-fifa-1.html
@@ -137,9 +137,10 @@
                 <ul class="flex">
                   <!-- Change the sections for your tutorial here!! -->
                   <li><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
-                  <li><a href="choosing-tutorial-page-fifa-section1.html"> Guides</a></li>
+                  <li><a href="choosing-tutorial-page-fifa-section3.html">Tactics And Strategies</a>
+                  </li> <li><a href="choosing-tutorial-page-fifa-section1.html"> Guides</a></li>
                   <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay </a></li>
-                  <li><a href="choosing-tutorial-page-fifa-section3.html">section3</a></li>
+                  
                 </ul>
                 <a href="Guide-fifa-2.html">Next</a>
               </nav>
