--- a/public/Tutorial-fifa-1.html
+++ b/public/Tutorial-fifa-1.html
@@ -112,9 +112,10 @@
                 <ul class="flex">
                   <!-- Change the sections for your tutorial here!! -->
                   <li><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
+                  <li><a href="choosing-tutorial-page-fifa-section3.html">Tactics And Strategies</a></li>
                   <li><a href="choosing-tutorial-page-fifa-section1.html"> Guides</a></li>
                   <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay </a></li>
-                  <li><a href="choosing-tutorial-page-fifa-section3.html">section3</a></li>
+                                 
                 </ul>
                 <a href="Tutorial-fifa-2.html">Next</a>
               </nav>
