--- a/public/choosing-tutorial-page-fifa-section3.html
+++ b/public/choosing-tutorial-page-fifa-section3.html
@@ -71,7 +71,7 @@
       <a href="Tutorial-fifa-1.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <img src="images/tactics-fifa.webp" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">How to Perform skill moves </h2>
@@ -88,7 +88,7 @@
       <a href="Tutorial-fifa-2.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <img src="images/tactics-fifa.webp" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">FIFA 23 tactics: Attacking settings </h2>
@@ -105,7 +105,7 @@
       <a href="Tutorial-fifa-3.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-fifa-1.jpg" alt="">
+          <img src="images/tactics-fifa.webp" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">FIFA 23 tactics: Defending settings </h2>
@@ -119,7 +119,7 @@
           </div>
         </article>
       </a>
-      
+
     </main>
   </body>
 </html>
