--- a/public/choosing-tutorial-page-fifa-section2.html
+++ b/public/choosing-tutorial-page-fifa-section2.html
@@ -56,7 +56,7 @@
     <!-- Main Body -->
     <main class="body">
       <!-- Change your hero image here!! -->
-      <img class="hero" src="images/hero-fifa.jpg" alt="">
+      <img class="hero" src="images/fifahero.jpg" alt="">
       <nav>
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
