finished the hollow knight section

--- a/public/Tutorial-hollow-knight-lore.html
+++ b/public/Tutorial-hollow-knight-lore.html
@@ -95,10 +95,11 @@
             <nav class="flex">
                 <ul class="flex">
                   <!-- Change the sections for your tutorial here!! -->
-                  <li><a href="choosing-tutorial-page-hollow-knight-all.html">ALL</a></li>
-                  <li><a href="choosing-tutorial-page-hollow-knight-section1.html">Area's</a></li>
-                  <li><a href="choosing-tutorial-page-hollow-knight-section2.html">Bosses</a></li>
-                  <li><a href="choosing-tutorial-page-hollow-knight-section3.html">Lore</a></li>
+                  <li class="selected"><a href="choosing-tutorial-page-hollow-knight-all.html">ALL</a></li>
+                  <li><a href="choosing-tutorial-page-hollow-knight-areas.html">Area's</a></li>
+                  <li><a href="choosing-tutorial-page-hollow-knight-bosses.html">Bosses</a></li>
+                  <li><a href="choosing-tutorial-page-hollow-knight-grubs.html">Grubs</a></li>
+                  <li><a href="choosing-tutorial-page-hollow-knight-lore.html">Lore</a></li>
                 </ul>
                 <a href="choosing-tutorial-page-gta-section3.html">Next</a>
               </nav>
