--- a/public/choosing-tutorial-page-hollow-knight-all.html
+++ b/public/choosing-tutorial-page-hollow-knight-all.html
@@ -61,9 +61,10 @@
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
           <li class="selected"><a href="choosing-tutorial-page-hollow-knight-all.html">ALL</a></li>
-          <li><a href="choosing-tutorial-page-hollow-knight-section1.html">Area's</a></li>
-          <li><a href="choosing-tutorial-page-hollow-knight-section2.html">Bosses</a></li>
-          <li><a href="choosing-tutorial-page-hollow-knight-section3.html">Lore</a></li>
+          <li><a href="choosing-tutorial-page-hollow-knight-areas.html">Area's</a></li>
+          <li><a href="choosing-tutorial-page-hollow-knight-bosses.html">Bosses</a></li>
+          <li><a href="choosing-tutorial-page-hollow-knight-grubs.html">Grubs</a></li>
+          <li><a href="choosing-tutorial-page-hollow-knight-lore.html">Lore</a></li>
         </ul>
       </nav>
 
@@ -87,19 +88,145 @@
         </article>
       </a>
 
-      <a href="Tutorial-hollow-knight-NAME.html">
+      <a href="Tutorial-hollow-knight-fungal-wastes.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-hollow-knight-NAME.jpg" alt="">
+          <img src="images/tutorial-hollow-knight-fungal-wastes.jpg" alt="">
           <div>
             <!-- Change the name of tutorial here!! -->
-            <h2 class="margin-0">Name of tutorial</h2>
+            <h2 class="margin-0">Fungal Wastes</h2>
             <hr>
             <!-- Change you name here!! -->
             <h6 class="margin-0">By Thomas Zegers</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
-              Introduction to tutorial
+              complete guide for Fungal Wastes
+            </p>
+          </div>
+        </article>
+      </a>
+
+      <a href="Tutorial-hollow-knight-deepnest.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-hollow-knight-deepnest.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Deepnest</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Thomas Zegers</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              complete guide for Deepnest
+            </p>
+          </div>
+        </article>
+      </a>
+
+      <a href="Tutorial-hollow-knight-hive.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-hollow-knight-hive.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">The Hive</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Thomas Zegers</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              complete guide for The Hive
+            </p>
+          </div>
+        </article>
+      </a>
+
+      <a href="Tutorial-hollow-knight-grubs.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-hollow-knight-grubs.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">All Grub Locations</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Thomas Zegers</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              complete guide for all Grubbies
+            </p>
+          </div>
+        </article>
+      </a>
+
+      <a href="Tutorial-hollow-knight-soul-master.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-hollow-knight-soul-master.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Soul Master</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Thomas Zegers</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              complete guide on how te defeat Soul master
+            </p>
+          </div>
+        </article>
+      </a>
+
+      <a href="Tutorial-hollow-knight-grimm.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-hollow-knight-grimm.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Nightmare King Grimm</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Thomas Zegers</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              complete guide on how te defeat Nightmare King Grimm
+            </p>
+          </div>
+        </article>
+      </a>
+
+      <a href="Tutorial-hollow-knight-sisters.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-hollow-knight-sisters.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Sisters of Battle</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Thomas Zegers</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              complete guide on how te defeat the Sisters
+            </p>
+          </div>
+        </article>
+      </a>
+
+      <a href="Tutorial-hollow-knight-absrad.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-hollow-knight-absrad.jpg" alt="">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Absolute Radiance</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Thomas Zegers</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              complete guide on how te defeat Absolute Radience
             </p>
           </div>
         </article>
